# projects-in-progress

./: README.md  commits.md  latest-commit  spaces.md
R-projects/Quizes/: quiz_1.md
celestial-modeling/: Sirius.ipynb  building-objcet.py  latest-commit  test.fits  tries.ipynb  try-to-save-observation.ipynb
celestial-modeling/.ipynb_checkpoints/: Sirius-checkpoint.ipynb  try-to-save-observation-checkpoint.ipynb
dan/: enrollment.py  first_ex.py  latest-commit  students.csv  tree.dot  unrolment.py  validation.csv
graphs/: Algorithm.cs
intervals/: CMakeLists.txt  Makefile  README.md
intervals/headers/: enums.h  interval.h  structs.h
intervals/src/: amount_of_intervals_in_set.c  difference.c  error_management.c  init_sets_of_intervals.c  initialize_interval.c  input.c  interface.c  intersection.c  main.c  output.c  set_difference.c  set_intersection.c  set_union.c  sqr_inequalities.c  union.c
intervals/tests/: unit_test
piscine-swift-ios/: README.md
push-swap/: Makefile  README.md
push-swap/checker/: main.c
push-swap/includes/: ps.h
push-swap/libft/: Makefile  README.md  author
push-swap/sources/: main.c  modify_lists.c  sort_list.c
push-swap/vm/: check_file.c  main.c
socket-practise/: README.md
uni/: latest-commit  theory.md
uni/Theory of evaluation of systems in conditions of uncertainty/: theory.md
uni/databases/: latest-commit
uni/economics_ecological/: lab3.py  yhetman_lab3.xlsx
uni/graphs/: README.md
uni/modeling_of_random_processes/: a.out  lab1.c  lab1.ipynb  latest-commit  setup.py
uni/operation-systems/: Thread-0.txt  (+77 more)
(+397 files in other folders)
